06-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: event-hub
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: event-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.5.7
          args: ["start-dev", "--import-realm", "--http-enabled=true", "--hostname-strict=false"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: keycloak-realm-import
              mountPath: /opt/keycloak/data/import
              readOnly: true
      volumes:
        - name: keycloak-realm-import
          configMap:
            name: keycloak-realm-import
