09-config-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: event-hub
spec:
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    app: config-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: event-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: amiru1234/config-server:latest
          ports:
            - containerPort: 8888
