10-eureka-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: event-hub
spec:
  ports:
    - port: 8761
      targetPort: 8761
  selector:
    app: eureka-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: event-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: amiru1234/eureka-server:latest
          ports:
            - containerPort: 8761
