11-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: event-hub
spec:
  ports:
    - port: 9092
      targetPort: 9092
  selector:
    app: auth-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: event-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: amiru1234/auth-service-api:latest
          ports:
            - containerPort: 9092
