12-event-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: event-hub
spec:
  ports:
    - port: 9091
      targetPort: 9091
  selector:
    app: event-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: event-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: amiru1234/event-service-api:latest
          ports:
            - containerPort: 9091
