13-booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: event-hub
spec:
  ports:
    - port: 9093
      targetPort: 9093
  selector:
    app: booking-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: event-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: amiru1234/booking-service-api:latest
          ports:
            - containerPort: 9093
