14-notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: event-hub
spec:
  ports:
    - port: 9094
      targetPort: 9094
  selector:
    app: notification-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: event-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: amiru1234/notification-service-api:latest
          ports:
            - containerPort: 9094
