15-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: event-hub
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: gateway-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: event-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: amiru1234/gateway-service-api:latest
          ports:
            - containerPort: 9090
