21-frontend-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-admin
  namespace: event-hub
spec:
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    app: frontend-admin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-admin
  namespace: event-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-admin
  template:
    metadata:
      labels:
        app: frontend-admin
    spec:
      containers:
        - name: frontend-admin
          image: amiru1234/event-admin-dashboard:latest
          ports:
            - containerPort: 4000
